tests/a/tests/provenance/fail/fn/fn.1.stderr
error: expected (b,root), found (root,root)
 --> tests/provenance/fail/fn/fn.1.rs:6:5
  |
6 |     x + 1
  |     ^^^^^
